# vibe-browser

./: .gitignore  AGENTS.md  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
.vibe/: settings.json
cmd/vibe-browser/: main.go  main_test.go
examples/sdk/: main.go  main_test.go
internal/chrome/: launcher.go  launcher_test.go  process_unix.go  process_windows.go
npm/: README.md  package.json
npm/scripts/: postinstall.js
pkg/browser/: browser.go  browser_test.go
pkg/cdp/: client.go  client_test.go
pkg/client/: client.go  client_test.go
pkg/daemon/: daemon.go  daemon_test.go
pkg/mcp/: mcp.go  mcp_test.go
pkg/protocol/: types.go  types_test.go
pypi/: README.md  pyproject.toml  setup.py
pypi/src/vibe_browser_installer/: cli.py
scripts/: build-npm-packages.sh  build-pypi-packages.sh  npm-installer-wrapper.js  sync-pypi-version.sh
skill-data/core/: SKILL.md
skill-data/core/references/: commands.md  session-management.md  snapshot-refs.md
skill-data/core/templates/: data-extraction.sh  form-automation.sh  screenshot-workflow.sh
skills/vibe-browser/: SKILL.md
skills/vibe-browser/references/: commands.md  session-management.md  snapshot-refs.md
skills/vibe-browser/templates/: data-extraction.ps1  data-extraction.sh  form-automation.ps1  form-automation.sh  screenshot-workflow.ps1  screenshot-workflow.sh
