[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-browser-installer"
version = "0.1.3"
description = "Fast browser automation CLI and Go SDK for AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [{ name = "VibeCoding" }]
keywords = ["browser", "automation", "ai", "agent", "cdp", "chrome", "cli", "sdk", "mcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/startvibecoding/vibe-browser"
Repository = "https://github.com/startvibecoding/vibe-browser"
Documentation = "https://github.com/startvibecoding/vibe-browser#readme"

[project.scripts]
vibe-browser = "vibe_browser_installer.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vibe_browser_installer = ["bin/vibe-browser", "bin/vibe-browser.exe"]
